--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 	<section class="characters">
 		<h3>SELECT YOUR CHARACTER:</h3>
 		<div id ="toad" class="character">
-			<img src="assets/Images/toad.jpg" alt="toad">
+			<img src="assets/images/toad.jpg" alt="toad">
 			<p>TOAD: <span id="toad-health"></span></p>
 		</div>
 		<div id ="mario" class="character">
-			<img src="assets/Images/mario.jpg" alt="mario">
+			<img src="assets/images/mario.jpg" alt="mario">
 			<p>MARIO: <span id="mario-health"></span></p>
 		</div>
 		<div id="luigi" class="character">
-			<img src="assets/Images/luigi.jpg" alt="luigi">
+			<img src="assets/images/luigi.jpg" alt="luigi">
 			<p>LUIGI: <span id="luigi-health"></span></p>
 		</div>
 		<div id="bowser" class="character">
-			<img src="assets/Images/bowser.jpg" alt="bowser">
+			<img src="assets/images/bowser.jpg" alt="bowser">
 			<p>BOWSER: <span id="bowser-health"></span></p>
 		</div>
 	</section>
